# Chess-Void

./: CMakeLists.txt  LICENSE  README.md
.github/workflows/: cmake-windows.yml
src/: chess_void.cpp  chess_void.hpp  coords.cpp  coords.hpp  hash.cpp  legal.cpp  main.cpp  move.cpp  test_coords.cpp
